--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-23T15%3A45%3A06.269Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-24T20%3A48%3A16.326Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -77,29 +77,29 @@
     <main>
         <section id="site-hero" class="d-flex justify-content-between flex-column header-background" style="background-color:#24669D;background-position: center 0px;user-select: none;">
             <div id="hero-text" class="container text-white d-flex flex-column">
-                <div class="text-uppercase d-flex justify-content-between" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-right:.2em;z-index:1">
+                <div id="hero-text-upper" class="text-uppercase d-flex justify-content-between" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-right:.2em;z-index:1">
                     <span>Welcome to the chalet hotel</span>
                     <span id="lang-block">
                         <a id="lang-fr" class="lang-item" href="/">fr</a>
                         <a id="lang-en" class="lang-item" href="/index_en.html">en</a>
                     </span>
                 </div>
-                <div class="heading d-block" style="line-height: 1em;font-size:1em">
+                <div id="hero-text-middle" class="heading d-block" style="line-height: 1em;font-size:1em">
                     Le Panoramique ⋆⋆⋆
                 </div>
-                <div class="text-uppercase d-block text-center" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-top:1em">
+                <div id="hero-text-lower" class="text-uppercase d-block text-center" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-top:1em">
                     Ferrand Valley · Les 2 Alpes · France
                 </div>
             </div>
 
-            <a href="https://www.bike-oisans.com" target="_blank">
+            <a class="opacity-fadein" href="https://www.bike-oisans.com" target="_blank">
                 <picture>
                     <source srcset="images/logos/logo_velo.webp">
                     <img id="logo-velo" class="rounded" src="images/logos/logo_velo.jpg" alt="Logo accueil vélo" />
                 </picture>
             </a>
 
-            <div id="logo-bar" class="navbar-width">
+            <div id="logo-bar" class="navbar-width opacity-fadein">
                 <picture>
                     <source srcset="images/logos/meilleure_offre.webp">
                     <img class="header-logo" src="images/logos/meilleure_offre.jpg" alt="Logo meilleure offre" width="128px" height="128px" />
@@ -945,7 +945,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-23T15%3A45%3A06.269Z"></script>
+    <script src="script/page.js?v=2023-04-24T20%3A48%3A16.326Z"></script>
 </body>
 
 </html>
