--- a/src/html/index.html
+++ b/src/html/index.html
@@ -102,7 +102,7 @@
             <div id="logo-bar" class="navbar-width opacity-fadein">
                 <picture>
                     <source srcset="images/logos/meilleure_offre.webp">
-                    <img class="header-logo" src="images/logos/meilleure_offre.jpg" alt="Logo meilleure offre" width="128px" height="128px" />
+                    <img class="header-logo" src="images/logos/meilleure_offre.jpg" alt="Logo meilleure offre" width="128px" height="128px" style="transform:translateX(10px)"/>
                 </picture>
             </div>
 
