Bind "Book now" button

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="rounded navbar-button">
-                    <a class="navbar-link" href="javascript:navbar.scrollToElement('booknow')">#=(book_now)</a>
+                    <a class="navbar-link" href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank">#=(book_now)</a>
                 </div>
 
                 <button id="navbar-toggler" class="rounded" type="button" aria-label="Menu" onclick="navbar.toggleMenu()">
