--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-26T20%3A16%3A59.995Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-26T21%3A00%3A57.888Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -102,17 +102,23 @@
             <div id="logo-bar" class="navbar-width opacity-fadein">
                 <picture>
                     <source srcset="images/logos/meilleure_offre.webp">
-                    <img class="header-logo" src="images/logos/meilleure_offre.jpg" alt="Logo meilleure offre" width="128px" height="128px" style="transform:translateX(10px)"/>
+                    <img class="header-logo" src="images/logos/meilleure_offre.jpg" alt="Logo meilleure offre" width="128px" height="128px" style="transform:translateX(10px)" />
                 </picture>
             </div>
 
-            <div id="booknow" class="container py-5" style="max-width:1000px">
-                <div class="row rounded bg-light p-3 backdrop-shadow">
-                    <h4>Réservez en direct au meilleur prix</h4>
-                    <p>
-                        Ouverture imminente du module de réservations.<br />
-                        En attendant, merci de me contacter par email: <a style="color:darkblue" href="mailto:contact@chalet-lepanoramique.fr">contact@chalet-lepanoramique.fr</a>.
-                    </p>
+            <div id="booknow" class="container py-5">
+                <div class="row rounded bg-light backdrop-shadow overflow-hidden">
+                    <div class="bg-dark text-light text-center">
+                        <h4 class="my-2">Réservez en direct au meilleur prix</h4>
+                    </div>
+                    <div class="p-3 pt-0">
+                        <div class="text-center">
+                            <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary my-3">Réserver</a>
+                        </div>
+                        <div>
+                            Un peu perdus ? Contactez moi au:  <a href="tel:0476800625">04 76 80 06 25</a> ou par email:  <a href="mailto:contact@chalet-lepanoramique.fr">contact@chalet-lepanoramique.fr</a>.
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -965,7 +971,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-26T20%3A16%3A59.995Z"></script>
+    <script src="script/page.js?v=2023-04-26T21%3A00%3A57.888Z"></script>
 </body>
 
 </html>
