Remove plateaux de courtoisie

--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-05-05T13%3A46%3A39.230Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-05-10T16%3A30%3A01.234Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -260,7 +260,7 @@ My only desire: to make your stay in my chalet unforgettable, a unique experienc
                             <h3 class="card-title">Premium Panoramic Rooms</h3>
                             <p>
                                 Let me first introduce you to the premium Panoramic rooms.
-They all face the panorama with their private balcony and are equipped with a King size bed for a night of XXL comfort (divisible into 2 twin beds), courtesy trays, French linen bed linen, separate toilets and a renovated bathroom with a selection of organic and French hospitality products.
+They all face the panorama with their private balcony and are equipped with a King size bed for a night of XXL comfort (divisible into 2 twin beds), French linen bed linen, separate toilets and a renovated bathroom with a selection of organic and French hospitality products.
 The decoration will surprise you with its mountain inspiration.
                             </p>
                         </div>
@@ -970,7 +970,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-05-05T13%3A46%3A39.230Z"></script>
+    <script src="script/page.js?v=2023-05-10T16%3A30%3A01.234Z"></script>
 </body>
 
 </html>
