Update Google Maps link

--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-05-10T16%3A30%3A01.234Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-05-14T11%3A08%3A14.374Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -563,7 +563,7 @@
                 <h2>#=(section_infos_title)</h2>
                 <div class="row mt-4 text-left">
                     <div class="col-12 col-md-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2818.6986852073487!2d6.144188361692429!3d45.05133605999382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478a14f9ab5cfa9f%3A0x715585d673b12e46!2sLogis%20H%C3%B4tel%20le%20Panoramique!5e0!3m2!1sfr!2sfr!4v1680296381957!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-12 rounded" title="Carte" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11274.69412601057!2d6.133660981910849!3d45.0518464424825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478a1312138fd1ff%3A0xd58cfe25e605f8cd!2sChalet%20Le%20Panoramique!5e0!3m2!1sfr!2sfr!4v1684059250010!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-12 rounded" title="Carte" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="custom-card">
@@ -936,7 +936,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-05-10T16%3A30%3A01.234Z"></script>
+    <script src="script/page.js?v=2023-05-14T11%3A08%3A14.374Z"></script>
 </body>
 
 </html>
