--- a/src/html/index.html
+++ b/src/html/index.html
@@ -563,7 +563,7 @@
                 <h2>#=(section_infos_title)</h2>
                 <div class="row mt-4 text-left">
                     <div class="col-12 col-md-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2818.6986852073487!2d6.144188361692429!3d45.05133605999382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478a14f9ab5cfa9f%3A0x715585d673b12e46!2sLogis%20H%C3%B4tel%20le%20Panoramique!5e0!3m2!1sfr!2sfr!4v1680296381957!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-12 rounded" title="Carte" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11274.69412601057!2d6.133660981910849!3d45.0518464424825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478a1312138fd1ff%3A0xd58cfe25e605f8cd!2sChalet%20Le%20Panoramique!5e0!3m2!1sfr!2sfr!4v1684059250010!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-12 rounded" title="Carte" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="custom-card">
